--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
 		"@supabase/ssr": "^0.6.1",
+		"bits-ui": "^2.8.10",
+		"clsx": "^2.1.1",
 		"init": "^0.1.2",
+		"md5": "^2.3.0",
 		"mode-watcher": "^1.0.8",
-		"shadcn-svelte": "^1.0.4"
+		"shadcn-svelte": "^1.0.4",
+		"tailwind-merge": "^3.3.1"
 	}
 }
