--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		]
 	},
 	"dependencies": {
+		"@iconify/svelte": "^5.0.0",
 		"@internationalized/date": "^3.8.2",
 		"@supabase/auth-helpers-sveltekit": "^0.13.0",
 		"@supabase/ssr": "^0.6.1",
@@ -55,6 +56,7 @@
 		"bits-ui": "^2.8.10",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"gsap": "^3.13.0",
 		"init": "^0.1.2",
 		"md5": "^2.3.0",
 		"mode-watcher": "^1.0.8",
